SERVER-63198 Prevent shutdown command from hanging